# VioBot

./: .gitattributes  .gitignore  CLAUDE.md  README.md  run_gui.bat
.claude/: launch.json
.claude/agents/: explorer.md  paper-reader.md
.claude/skills/algorithm-validation/: SKILL.md
.claude/skills/model-routing/: SKILL.md
MelodyExtractor/: CLAUDE.md  pyproject.toml  requirements.txt
MelodyExtractor/melody_extractor/: __init__.py  cli.py  config_io.py  eval_harness.py  input_adapter.py  reducer.py  schema.py  soundsim.py  timbre.py  transcriber.py  url_fetch.py
MelodyExtractor/melody_extractor/gui/: __init__.py  app.py  audio_bytes.py  eval_view.py  figures.py  inspector_view.py  launch.py  params.py  pipeline_cache.py  style.py
MelodyExtractor/presets/: README.md
MelodyExtractor/tests/: conftest.py  synth_util.py  test_cli.py  test_config_io.py  test_eval_harness.py  test_gui_apptest.py  test_gui_helpers.py  test_input_adapter.py  test_reducer.py  test_schema.py  test_soundsim.py  test_timbre.py  test_transcriber.py  test_url_fetch.py
MelodyExtractor/tests/fixtures/: generate_fixtures.py  mono_arpeggio.mid  mono_scale.mid  triple_rolled.mid  two_voice_thirds.mid
MotionPlanner/: CLAUDE.md  pyproject.toml  requirements.txt
MotionPlanner/motion_planner/: __init__.py  bow_sound_model.py  bowing.py  cli.py  compare.py  config_io.py  fingering.py  hardware.py  planner.py  profile_io.py  roundtrip.py  schema.py  simulate.py  sysid.py  trajectory.py  vibrato.py
MotionPlanner/motion_planner/firmware_bridge/: __init__.py  bench.py  protocol.py  streamer.py  transport.py
MotionPlanner/motion_planner/gui/: __init__.py  app.py  compare_view.py  figures.py  launch.py  params.py  pipeline_cache.py  plan_view.py  profile_view.py  style.py
MotionPlanner/profiles/: concept_a_1finger.json  concept_a_2finger.json  concept_b_4finger.json
MotionPlanner/scripts/: make_default_profiles.py
MotionPlanner/tests/: conftest.py  test_bowing.py  test_compare.py  test_fingering.py  test_firmware_bridge.py  test_gui_apptest.py  test_gui_helpers.py  test_hardware.py  test_planner.py  test_profile_io.py  test_roundtrip.py  test_schema.py  test_simulate.py  test_sysid.py  test_vibrato.py
MotionPlanner/tests/fixtures/: generate_fixtures.py  mono_arpeggio.stage1.json  mono_scale.stage1.json  triple_rolled.stage3.json  two_voice_thirds.stage2.json
docs/: CONCEPT_AudioFeedback.md  PRD_MelodyExtractor.md  PRD_MotionPlanner.md  SysID_Protocol.md  decisions.md  plan_GUI_MelodyExtractor.md
gui_hub/: __init__.py  audiofeedback_app.py  firmware_app.py  launch_all.py  registry.json  registry.py  workspace.py
